# preservation-system

./: .cspell.json  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  STRUCTURE.md  auto_init.py  auto_init_cade.ini  cade_core.py  cade_extensions.py  cade_integration.py  cade_interface.py  cade_manifest.json  cade_memory.py  cade_persona.json  cade_resurrect.md  dawid_health_history.json  docker-compose.yml  github_ssh.key  init.sh  loader.py  pyproject.toml  requirements-prod.txt  requirements.txt  setup.py  stageallandpush.ps1
.github/workflows/: ci.yml
cade/: __init__.py  version.py
cade/core/: __init__.py  cade.py  directive.py  extension.py  plugin.py
cade/extensions/: __init__.py
cade/models/: __init__.py
cade/plugins/: __init__.py
cade/utils/: __init__.py
docs/: trauma_replay.md
extras/starfield/: DawCH.txt  DawFiles.toml  DawInventoryReset.txt  Hotkeys.ini  StarfieldCustom.ini  StarfieldPrefs.ini  loadorder.txt  master_installation.md  modlist.txt  plugins.txt  starfield_bkp.7z
info/: CADE v5.0.md  Dawid_knowledgebase.txt  stageallandpush.ps1  stageallandpushtodevelop.ps1
ini-py/: auto_init.py  auto_init_all.py  auto_init_cade.py  cade_advanced.py  cade_custom.py  cade_extensions.py  cade_integration.py  cade_interface.py  cade_memory.py  cade_production.py  cade_usage_example.py  example_usage.py  init_cade.py  setup.py
init/: init.bat
json/: .cspell.json  cade_knowledgebases.json  cade_manifest.json  cade_paths.json  cade_persona.json  cspell.json  dawid_health_history.json
json/dictionaries/: en_GB.dic  en_SA.dic  en_US.dic
other/: git_clear_and-push.ps1  git_clear_and-push.txt  github_ssh.7z  stageallandpush.ps1  stageallandpushtodevelop.ps1
scripts/: __init__.py  auto_init.py  auto_init_all.py  auto_init_cade.ini  auto_init_cade.py  cade_advanced.py  cade_custom.py  cade_extensions.py  cade_integration.py  cade_interface.py  cade_memory.py  cade_production.py  cade_usage_example.py  init_cade.py  resurrection_loader.py  setup.py  watchdog_runner.py
starfield/: DawCH.txt  DawFiles.toml  DawInventoryReset.txt  Hotkeys.ini  SpaceshipTravel.txt  StarfieldCustom.ini  StarfieldPrefs.ini  loadorder.txt  lockedorder.txt  modlist.txt  plugins.txt
tests/: test_loader_and_core.py
