[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cade"
version = "0.1.0"
description = "Context-Aware Development Environment (CADE) - A flexible and extensible framework for building AI-powered applications."
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "pydantic>=1.10.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "ruff>=0.0.280",
]

[project.urls]
Homepage = "https://github.com/yourusername/cade"
Documentation = "https://cade.readthedocs.io"
Repository = "https://github.com/yourusername/cade"
Issues = "https://github.com/yourusername/cade/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["cade", "cade.*"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = false
no_implicit_reexport = true
no_implicit_optional = false
ignore_missing_imports = true
disable_error_code = [
    "assignment",
    "misc",
    "annotation-unchecked",
    "valid-type",
    "import-untyped",
]

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503"]

[tool.ruff]
line-length = 88
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "B",   # flake8-bugbear
    "C90", # mccabe complexity
    "TCH", # flake8-type-checking
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",  # Line too long (handled by black)
    "N801",  # Class name should use CapWords convention (we have some legacy code that doesn't follow this)
    "B008",  # FastAPI Depends in defaults
    "ARG001", # Unused arguments (e.g., FastAPI dependencies)
    "PTH123", # prefer Path.open (we are migrating gradually)
    "RUF013", # implicit Optional (we're on 3.8-compatible style in some modules)
]
target-version = "py38"
